--- a/CodeNetCore.Data/CodeNetCore.Data.csproj
+++ b/CodeNetCore.Data/CodeNetCore.Data.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\CodeNetCore.Infrastructure\CodeNetCore.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.0.1\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
