--- a/CodeNetCore/appsettings.json
+++ b/CodeNetCore/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\express;Database=Database;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=THIEPVU\\SQLEXPRESS;Database=DatabaseNetCore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
